fix(style): broken spacing on presentation cards

--- a/static/css/rosenpass.css
+++ b/static/css/rosenpass.css
@@ -631,8 +631,10 @@ div.doc-list-section-title p {
   margin-bottom: 2.5rem;
 }
 
-.presentation-card-title {
-  /* max-width: 75%; */
+p.h4.presentation-card-title,
+div.post-list-item.card .card-text p {
+  margin-left: unset;
+  margin-right: unset;
 }
 /* PDF styling */
 
